Updated page Macro at Startup/it

--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -62,12 +62,8 @@ Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
 </p><p><span id="Integrate_into_FreeCAD_startup"></span>
 </p>
 <h3><span id="Integrare_nell.27avvio_di_FreeCAD"></span><span class="mw-headline" id="Integrare_nell'avvio_di_FreeCAD">Integrare nell'avvio di FreeCAD</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Innanzitutto creare una nuova cartella nella cartella "Mod" dell'utente, ad esempio "MacroStartup".
-Copiare la macro modificata in questa cartella appena creata e rinominala con un'estensione '.py' se questo non &egrave; ancora il caso (nota che se sviluppi la macro da solo, pu&ograve; essere nominata con l'estensione ".py" anche in la cartella "Macro" in modo che non sia necessario rinominare durante la copia).
-Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inserire il seguente codice:
+<p>Per prima cosa, creare una nuova cartella nella cartella utente "Mod", ad esempio chiamandola "MacroStartup". Copiare la macro modificata in questa cartella appena creata e rinominala con estensione ".py", se non &egrave; gi&agrave; stata creata (nota che se si sviluppa la macro autonomamente, la si pu&ograve; rinominare con estensione ".py" anche nella cartella "Macro", in modo da non doverla rinominare durante la copia). Infine, creare nella stessa cartella un file chiamato "InitGui.py" che contenga il seguente codice:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="k">def</span> <span class="nf">runStartupMacros</span><span class="p">(</span><span class="n">name</span><span class="p">):</span>
     <span class="c1"># Do not run when NoneWorkbench is activated because UI isn't yet completely there</span>
     <span class="k">if</span> <span class="n">name</span> <span class="o">!=</span> <span class="s2">"NoneWorkbench"</span><span class="p">:</span>
@@ -130,13 +126,13 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116104821
+Cached time: 20260116104938
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.058 seconds
-Preprocessor visited node count: 145/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.055 seconds
+Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
@@ -146,14 +142,14 @@ Unstrip post&#8208;expand size: 6962/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.784      1 -total
- 56.54%    4.401      1 Template:Powerdocnavi/it
- 25.31%    1.970      3 Template:Code
- 23.57%    1.835      1 Template:Navigation_menu_2
- 13.71%    1.067      1 Template:TOCright
+100.00%    7.554      1 -total
+ 57.67%    4.356      1 Template:Powerdocnavi/it
+ 23.32%    1.762      3 Template:Code
+ 23.10%    1.745      1 Template:Navigation_menu_2
+ 14.42%    1.089      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104821 and revision id 1739075. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104937 and revision id 1739077. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
