Created page with "* Nello script di esempio 'InitGui.py' sopra, la funzione denominata 'runStartupMacros()' può essere modificata, a patto che vengano modificati anche gli altri quattro riferimenti ad essa, in modo che corrispondano tutti. * Questo script verrà eseguito prima del caricamento automatico del workbench di avvio desiderato nelle Preferenze di FreeCAD, [[Preferences_Editor/it#General_settings|Impostazioni generali]]."

--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -92,8 +92,8 @@ Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
 </p><p><span id="General_Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Note_generali">Note generali</span></h2>
-<ul><li>In the example 'InitGui.py' script above, the function named 'runStartupMacros()' may be changed, so long as you also change the other four references to it, so they all match.</li>
-<li>This script will be run prior to the auto loading of your desired startup workbench in the FreeCAD Preferences, <a href="../Preferences_Editor.html#General_settings" title="Preferences Editor">General settings</a>.</li></ul>
+<ul><li>Nello script di esempio 'InitGui.py' sopra, la funzione denominata 'runStartupMacros()' pu&ograve; essere modificata, a patto che vengano modificati anche gli altri quattro riferimenti ad essa, in modo che corrispondano tutti.</li>
+<li>Questo script verr&agrave; eseguito prima del caricamento automatico del workbench di avvio desiderato nelle Preferenze di FreeCAD, <a href="../it/Preferences_Editor.html#General_settings" title="Preferences Editor/it">Impostazioni generali</a>.</li></ul>
 <h3><span class="mw-headline" id="Linux">Linux</span></h3>
 <h3><span class="mw-headline" id="MacOS">MacOS</span></h3>
 <h3><span class="mw-headline" id="Windows">Windows</span></h3>
@@ -126,12 +126,12 @@ Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116104938
+Cached time: 20260116105016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.055 seconds
+CPU time usage: 0.042 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
@@ -142,14 +142,14 @@ Unstrip post&#8208;expand size: 6962/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.554      1 -total
- 57.67%    4.356      1 Template:Powerdocnavi/it
- 23.32%    1.762      3 Template:Code
- 23.10%    1.745      1 Template:Navigation_menu_2
- 14.42%    1.089      1 Template:TOCright
+100.00%   10.634      1 -total
+ 64.55%    6.864      1 Template:Powerdocnavi/it
+ 22.63%    2.406      1 Template:Navigation_menu_2
+ 18.03%    1.918      3 Template:Code
+ 14.14%    1.504      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104937 and revision id 1739077. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116105016 and revision id 1739079. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
