Created page with "* Nell'esempio precedente, è possibile posizionare la cartella "MacroStartup" all'interno della cartella "Mod" della directory principale di FreeCAD (sia nella versione installata che in quella portatile), oppure creare una cartella "Mod" accanto alla cartella "Macro" in "%USERPROFILE%\AppData\Roaming\FreeCAD\" e posizionarvi la cartella "MacroStartup". * Da quanto osservato, gli ambienti presenti in entrambe le cartelle "Mod" vengono caricati in ordine alfabetico. Quel..."

--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro beim Starten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_at_Startup.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro at Startup (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--complete" title="Ex&eacute;cuter une macro au d&eacute;marrage (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--low" title="Automatyczne uruchamianie makroinstrukcji. (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--med" title="&#1057;&#1090;&#1072;&#1088;&#1090;&#1086;&#1074;&#1099;&#1081; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089; (26% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <p><span id="Introduction"></span>
@@ -97,8 +97,8 @@ Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
 <h3><span class="mw-headline" id="Linux">Linux</span></h3>
 <h3><span class="mw-headline" id="MacOS">MacOS</span></h3>
 <h3><span class="mw-headline" id="Windows">Windows</span></h3>
-<ul><li>In the above example, you may place the 'MacroStartup' folder within the 'Mod' folder of your FreeCAD root directory (whether installed version or portable version), or you may create a 'Mod' folder along side the 'Macro' folder in '%USERPROFILE%\AppData\Roaming\FreeCAD\', and place the 'MacroStartup' folder there.</li>
-<li>From observation, the workbenches found within either 'Mod' folder are loaded alphabetically. Those in the FreeCAD root 'Mod' folder are loaded first, then FreeCAD scans the '%USERPROFILE%\AppData\Roaming\FreeCAD\Mod' folder for additional workbenches.</li></ul>
+<ul><li>Nell'esempio precedente, &egrave; possibile posizionare la cartella "MacroStartup" all'interno della cartella "Mod" della directory principale di FreeCAD (sia nella versione installata che in quella portatile), oppure creare una cartella "Mod" accanto alla cartella "Macro" in "%USERPROFILE%\AppData\Roaming\FreeCAD\" e posizionarvi la cartella "MacroStartup".</li>
+<li>Da quanto osservato, gli ambienti presenti in entrambe le cartelle "Mod" vengono caricati in ordine alfabetico. Quelli nella cartella "Mod" della directory principale di FreeCAD vengono caricati per primi, quindi FreeCAD analizza la cartella "%USERPROFILE%\AppData\Roaming\FreeCAD\Mod" per trovare workbench aggiuntivi.</li></ul>
 <p><span id="Related"></span>
 </p>
 <h2><span class="mw-headline" id="Riferimenti">Riferimenti</span></h2>
@@ -126,30 +126,30 @@ Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116105016
+Cached time: 20260116105056
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.064 seconds
+CPU time usage: 0.044 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6962/5000000 bytes
+Unstrip post&#8208;expand size: 6966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.634      1 -total
- 64.55%    6.864      1 Template:Powerdocnavi/it
- 22.63%    2.406      1 Template:Navigation_menu_2
- 18.03%    1.918      3 Template:Code
- 14.14%    1.504      1 Template:TOCright
+100.00%   13.326      1 -total
+ 63.84%    8.507      1 Template:Powerdocnavi/it
+ 39.26%    5.232      1 Template:Navigation_menu_2
+ 19.55%    2.605      3 Template:Code
+ 13.30%    1.773      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116105016 and revision id 1739079. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116105055 and revision id 1739081. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
