--- a/wiki/it/Start_up_and_Configuration.html
+++ b/wiki/it/Start_up_and_Configuration.html
@@ -9,7 +9,7 @@
 <li><a href="../pt-br/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Inicializa&ccedil;&atilde;o e configura&ccedil;&atilde;o (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Start up and Configuration (20% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Start up and Configuration (19% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Start up and Configuration (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Spu&scaron;t&#283;n&iacute; a konfigurace (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="&#1047;&#1072;&#1087;&#1091;&#1089;&#1082; &#1080; &#1050;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; (34% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="&#36215;&#21205;&#26041;&#27861;&#12392;&#35373;&#23450; (1% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="&#49884;&#51089; &#48143; &#44396;&#49457;&#49444;&#51221; (18% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -546,11 +546,8 @@ FreeCAD pu&ograve; essere utilizzato in modalit&agrave; console utilizzando l'op
 <span class="nb">set</span> <span class="n">FREECAD_USER_DATA</span><span class="o">=%</span><span class="n">CURRENTDIR</span><span class="o">%</span><span class="n">FreeCAD</span>\
 <span class="n">start</span> <span class="o">%</span><span class="n">cd</span><span class="o">%</span><span class="n">FreeCAD</span>\<span class="nb">bin</span>\<span class="n">FreeCAD</span><span class="o">.</span><span class="n">exe</span> <span class="o">-</span><span class="n">u</span> <span class="o">%</span><span class="n">FREECAD_USER_DATA</span><span class="o">%</span><span class="n">user</span><span class="o">.</span><span class="n">cfg</span> <span class="o">-</span><span class="n">s</span> <span class="o">%</span><span class="n">FREECAD_USER_DATA</span><span class="o">%</span><span class="n">system</span><span class="o">.</span><span class="n">cfg</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>Ora fai doppio clic sul file batch per avviare FreeCAD. (<a rel="nofollow" class="external text" href="https://forum.freecadweb.org/viewtopic.php?f=4&amp;t=49028">vedere</a>)
-</p>
-</div>
-<p><br>
+<p>Ora fare doppio clic sul file batch per avviare FreeCAD. (<a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=4&amp;t=49028">vedere</a>)
+</p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../it/Import_Export_Preferences.html" title="Import Export Preferences/it">Preferenze di Importa/Esporta</a></div>
@@ -574,35 +571,35 @@ FreeCAD pu&ograve; essere utilizzato in modalit&agrave; console utilizzando l'op
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251223113800
+Cached time: 20260116105514
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 813/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.139 seconds
+Preprocessor visited node count: 812/1000000
 Post&#8208;expand include size: 14540/2097152 bytes
 Template argument size: 4958/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6519/5000000 bytes
+Unstrip post&#8208;expand size: 6518/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.378      1 -total
- 23.27%    7.302      1 Template:Userdocnavi/it
- 10.57%    3.315      1 Template:Navigation_menu_2
- 10.26%    3.220      2 Template:Docnav/it
-  9.33%    2.927      4 Template:Code
-  8.32%    2.610     36 Template:Incode
-  7.56%    2.371     41 Template:FileName
-  6.95%    2.182      1 Template:Version/it
-  5.22%    1.637      1 Template:TOCright
-  5.07%    1.591      1 Template:MenuCommand
+100.00%   27.009      1 -total
+ 20.48%    5.532      1 Template:Userdocnavi/it
+ 10.61%    2.865     41 Template:FileName
+ 10.56%    2.852      4 Template:Code
+  9.19%    2.483      1 Template:Navigation_menu_2
+  8.60%    2.321     36 Template:Incode
+  7.27%    1.964      2 Template:Docnav/it
+  6.02%    1.627      1 Template:MenuCommand
+  5.78%    1.561      1 Template:VeryImportantMessage
+  5.32%    1.436      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2393-0!canonical and timestamp 20251223113759 and revision id 1719638. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2393-0!canonical and timestamp 20260116105514 and revision id 1739083. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
