--- a/wiki/it/Start_up_and_Configuration.html
+++ b/wiki/it/Start_up_and_Configuration.html
@@ -4,7 +4,7 @@
 <li><a href="../tr/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Start up and Configuration (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Puesta en marcha y Configuraci&oacute;n (23% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--complete" title="D&eacute;marrage et configuration (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--complete" title="Uruchomienie i konfiguracja (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--low" title="Inicializa&ccedil;&atilde;o e configura&ccedil;&atilde;o (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Start_up_and_Configuration.html" class="mw-pt-progress mw-pt-progress--med" title="Start up and Configuration (20% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -259,7 +259,6 @@ FreeCAD pu&ograve; essere utilizzato in modalit&agrave; console utilizzando l'op
 <p><span id="User_related_information"></span>
 </p>
 <h3><span id="Informazioni_relative_all.27utente"></span><span class="mw-headline" id="Informazioni_relative_all'utente">Informazioni relative all'utente</span></h3>
-<div class="mw-translate-fuzzy">
 <table border="2" cellpadding="4" cellspacing="0" style="margin-top:1em; margin-bottom:1em; background:#f9f9f9; border:1px #aaa solid; border-collapse:collapse;">
 
 <tbody><tr>
@@ -271,28 +270,27 @@ FreeCAD pu&ograve; essere utilizzato in modalit&agrave; console utilizzando l'op
 <tr>
 <td>UserAppData</td>
 <td>Percorso dove FreeCAD archivia i dati dell'applicazione relativi all'utente.</td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Documents and Settings\username\AppData\FreeCAD</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%\FreeCAD</span></td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.config/.FreeCAD</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.FreeCAD</span>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Users\username\AppData\Roaming\FreeCAD</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%\FreeCAD</span></td>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.local/share/FreeCAD</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD</span>
 </td></tr>
 <tr>
 <td>UserParameter</td>
 <td>File in cui FreeCAD  archivia i dati dell'applicazione relativi all'utente.</td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Documents and Settings\username\AppData\FreeCAD\user.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%\FreeCAD\user.cfg</span></td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.FreeCAD/user.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.config/FreeCAD/user.cfg</span> or <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">$HOME/.config/.FreeCAD/user.cfg</span>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Users\username\AppData\Roaming\FreeCAD\user.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%\FreeCAD\user.cfg</span></td>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.config/FreeCAD/user.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.config/FreeCAD/user.cfg</span> or <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">$HOME/.config/FreeCAD/user.cfg</span>
 </td></tr>
 <tr>
 <td>SystemParameter</td>
 <td>File in cui FreeCAD  archivia i dati relativi all'applicazione.</td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Documents and Settings\username\AppData\FreeCAD\system.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%\FreeCAD\system.cfg</span></td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.config/.FreeCAD/system.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.FreeCAD/system.cfg</span> or <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">$HOME/.FreeCAD/system.cfg</span>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Users\username\AppData\Roaming\FreeCAD\system.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%\FreeCAD\system.cfg</span></td>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.config/FreeCAD/system.cfg</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.config/FreeCAD/system.cfg</span> or <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">$HOME/.config/FreeCAD/system.cfg</span>
 </td></tr>
 <tr>
 <td>UserHomePath</td>
 <td>Percorso home dell'utente corrente</td>
-<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Documents and Settings\username</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%USERPROFILE%</span></td>
+<td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">C:\Users\username</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%USERPROFILE%</span></td>
 <td><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username</span><hr><i>Percorso breve&nbsp;: </i><span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~</span>
 </td></tr></tbody></table>
-</div>
 <p>Nota: per le distribuzioni Linux, un file di configurazione aggiuntivo relativo a <a href="../it/Third_Party_Tools.html#Qt-Toolkit" title="Third Party Tools/it">Qt</a> pu&ograve; esistere nel percorso <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">/home/username/.config/FreeCAD/FreeCAD.conf</span>.
 </p><p><span id="Command_line_arguments"></span>
 </p>
@@ -571,35 +569,35 @@ FreeCAD pu&ograve; essere utilizzato in modalit&agrave; console utilizzando l'op
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116105514
+Cached time: 20260116110207
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 812/1000000
-Post&#8208;expand include size: 14540/2097152 bytes
-Template argument size: 4958/2097152 bytes
+CPU time usage: 0.107 seconds
+Real time usage: 0.144 seconds
+Preprocessor visited node count: 811/1000000
+Post&#8208;expand include size: 14531/2097152 bytes
+Template argument size: 4949/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6518/5000000 bytes
+Unstrip post&#8208;expand size: 6522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.009      1 -total
- 20.48%    5.532      1 Template:Userdocnavi/it
- 10.61%    2.865     41 Template:FileName
- 10.56%    2.852      4 Template:Code
-  9.19%    2.483      1 Template:Navigation_menu_2
-  8.60%    2.321     36 Template:Incode
-  7.27%    1.964      2 Template:Docnav/it
-  6.02%    1.627      1 Template:MenuCommand
-  5.78%    1.561      1 Template:VeryImportantMessage
-  5.32%    1.436      1 Template:TOCright
+100.00%   30.748      1 -total
+ 21.58%    6.634      1 Template:Userdocnavi/it
+ 11.68%    3.591      4 Template:Code
+  8.09%    2.488     36 Template:Incode
+  8.03%    2.468      1 Template:Navigation_menu_2
+  8.01%    2.464      2 Template:Docnav/it
+  7.79%    2.396     41 Template:FileName
+  6.53%    2.009      1 Template:VeryImportantMessage
+  5.73%    1.761      1 Template:MenuCommand
+  5.41%    1.663      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2393-0!canonical and timestamp 20260116105514 and revision id 1739083. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2393-0!canonical and timestamp 20260116110207 and revision id 1739085. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
