--- a/wiki/it/Logo.html
+++ b/wiki/it/Logo.html
@@ -6,10 +6,9 @@
 <li><a href="../pl/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Logo.html" class="mw-pt-progress mw-pt-progress--low" title="Logotipo (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li></ul></div>
 <p>Il logo di FreeCAD &egrave; stato <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=87074">selezionato dalla comunit&agrave; di FreeCAD</a> durante un concorso di proposte presentate dai membri della comunit&agrave;. &Egrave; stato poi donato alla FPA affinch&eacute; lo gestisca per conto dell'intera comunit&agrave; di FreeCAD.
+</p><p><span id="Trademark_and_licensing"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Trademark_and_licensing">Trademark and licensing</span></h2>
-</div>
+<h2><span class="mw-headline" id="Marchio_e_licenza">Marchio e licenza</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The logo is a <a rel="nofollow" class="external text" href="https://fpa.freecad.org/documents/Trademark.pdf">trademark owned by the FPA (FreeCAD project association)</a>. This means the <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FPA</a> is the sole body authorized to set its license, that is, to say who has the right to use the FreeCAD logo or not. The logo files, which are part of the FreeCAD source code or available elsewhere, for example on this wiki, are still all under the same licenses as the rest of FreeCAD (LGPL for the source code and Creative Commons for this wiki). You are still free to use the FreeCAD logo anywhere, on the same terms as the rest of FreeCAD, which means, basically, that you must use it to reference FreeCAD, and not use it, for example, for your own product, or any other way that is not referencing FreeCAD.
 </p>
@@ -31,12 +30,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116110548
+Cached time: 20260116110600
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.018 seconds
-Real time usage: 0.030 seconds
+CPU time usage: 0.019 seconds
+Real time usage: 0.032 seconds
 Preprocessor visited node count: 17/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -50,7 +49,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116110548 and revision id 1739089. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116110600 and revision id 1739091. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
