Created page with "== Linee guida =="

--- a/wiki/it/Logo.html
+++ b/wiki/it/Logo.html
@@ -17,9 +17,9 @@
 <p>The bottom line is, you are welcome to use the FreeCAD logo anywhere, but you should only use it to refer to FreeCAD itself, not to, for example, your own business.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Guidelines">Guidelines</span></h2>
-</div>
+<p><span id="Guidelines"></span>
+</p>
+<h2><span class="mw-headline" id="Linee_guida">Linee guida</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The logo files in different formats are all hosted on the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FPA/tree/main/images/logos">FPA Git repository</a>. For your convenience, a <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FPA/blob/main/images/logos/logo_kit.zip">logo kit (zip file)</a> is also available for download, that contains all the needed files.
 </p>
@@ -30,12 +30,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116110600
+Cached time: 20260116110610
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.019 seconds
-Real time usage: 0.032 seconds
+CPU time usage: 0.016 seconds
+Real time usage: 0.027 seconds
 Preprocessor visited node count: 17/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -49,7 +49,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116110600 and revision id 1739091. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116110610 and revision id 1739093. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
