--- a/wiki/it/Logo.html
+++ b/wiki/it/Logo.html
@@ -2,17 +2,15 @@
 <li><a href="../de/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Logo.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Logo.html" class="mw-pt-progress mw-pt-progress--low" title="Logotipo (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li></ul></div>
 <p>Il logo di FreeCAD &egrave; stato <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=87074">selezionato dalla comunit&agrave; di FreeCAD</a> durante un concorso di proposte presentate dai membri della comunit&agrave;. &Egrave; stato poi donato alla FPA affinch&eacute; lo gestisca per conto dell'intera comunit&agrave; di FreeCAD.
 </p><p><span id="Trademark_and_licensing"></span>
 </p>
 <h2><span class="mw-headline" id="Marchio_e_licenza">Marchio e licenza</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The logo is a <a rel="nofollow" class="external text" href="https://fpa.freecad.org/documents/Trademark.pdf">trademark owned by the FPA (FreeCAD project association)</a>. This means the <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FPA</a> is the sole body authorized to set its license, that is, to say who has the right to use the FreeCAD logo or not. The logo files, which are part of the FreeCAD source code or available elsewhere, for example on this wiki, are still all under the same licenses as the rest of FreeCAD (LGPL for the source code and Creative Commons for this wiki). You are still free to use the FreeCAD logo anywhere, on the same terms as the rest of FreeCAD, which means, basically, that you must use it to reference FreeCAD, and not use it, for example, for your own product, or any other way that is not referencing FreeCAD.
+<p>Il logo &egrave; un <a rel="nofollow" class="external text" href="https://fpa.freecad.org/documents/Trademark.pdf">marchio registrato di propriet&agrave; della FPA (FreeCAD Project Association)</a>. Ci&ograve; significa che la <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FPA</a> &egrave; l'unico organismo autorizzato a stabilire la propria licenza, ovvero a stabilire chi ha il diritto di utilizzare il logo di FreeCAD e chi no. I file del logo, che fanno parte del codice sorgente di FreeCAD o sono disponibili altrove, ad esempio su questo wiki, sono comunque tutti coperti dalle stesse licenze del resto di FreeCAD (LGPL per il codice sorgente e Creative Commons per questo wiki). Siete comunque liberi di utilizzare il logo di FreeCAD ovunque, alle stesse condizioni del resto di FreeCAD, il che significa, in sostanza, che dovete utilizzarlo per fare riferimento a FreeCAD e non utilizzarlo, ad esempio, per i vostri prodotti o in qualsiasi altro modo che non faccia riferimento a FreeCAD.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The bottom line is, you are welcome to use the FreeCAD logo anywhere, but you should only use it to refer to FreeCAD itself, not to, for example, your own business.
 </p>
@@ -28,26 +26,26 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116143432
+Cached time: 20260116145257
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.019 seconds
-Real time usage: 0.044 seconds
-Preprocessor visited node count: 16/1000000
+CPU time usage: 0.016 seconds
+Real time usage: 0.035 seconds
+Preprocessor visited node count: 15/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1212/5000000 bytes
+Unstrip post&#8208;expand size: 1213/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116143432 and revision id 1739095. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116145257 and revision id 1739097. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
