--- a/wiki/it/Logo.html
+++ b/wiki/it/Logo.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Logo.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Logo.html" class="mw-pt-progress mw-pt-progress--complete" title="Logo (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Logo.html" class="mw-pt-progress mw-pt-progress--low" title="Logotipo (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li></ul></div>
 <p>Il logo di FreeCAD &egrave; stato <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=87074">selezionato dalla comunit&agrave; di FreeCAD</a> durante un concorso di proposte presentate dai membri della comunit&agrave;. &Egrave; stato poi donato alla FPA affinch&eacute; lo gestisca per conto dell'intera comunit&agrave; di FreeCAD.
@@ -15,33 +15,30 @@
 </p>
 <h2><span class="mw-headline" id="Linee_guida">Linee guida</span></h2>
 <p>I file del logo in diversi formati sono tutti ospitati sul <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FPA/tree/main/images/logos">repository FPA Git</a>. Per vostra comodit&agrave;, &egrave; disponibile anche per il download un anche <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FPA/blob/main/images/logos/logo_kit.zip">kit logo (file zip)</a> contenente tutti i file necessari.
+</p><p>Insieme ai file del logo, si trova anche una comoda [guida <a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FPA/blob/main/images/logos/guidelines/guidelines.pdf">https://github.com/FreeCAD/FPA/blob/main/images/logos/guidelines/guidelines.pdf</a>] che spiega come utilizzare il logo.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Together with the logo files, you will also find a convenient <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FPA/blob/main/images/logos/guidelines/guidelines.pdf">guide book</a> that explains how to use the logo.
-</p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260116145333
+Cached time: 20260116145404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.017 seconds
-Real time usage: 0.028 seconds
-Preprocessor visited node count: 14/1000000
+CPU time usage: 0.014 seconds
+Real time usage: 0.025 seconds
+Preprocessor visited node count: 13/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1213/5000000 bytes
+Unstrip post&#8208;expand size: 1217/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116145333 and revision id 1739099. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116145404 and revision id 1739101. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
