Updated page Logo/it

--- a/wiki/it/Logo.html
+++ b/wiki/it/Logo.html
@@ -9,7 +9,7 @@
 </p><p><span id="Trademark_and_licensing"></span>
 </p>
 <h2><span class="mw-headline" id="Marchio_e_licenza">Marchio e licenza</span></h2>
-<p>Il logo &egrave; un <a rel="nofollow" class="external text" href="https://fpa.freecad.org/documents/Trademark.pdf">marchio registrato di propriet&agrave; della FPA (FreeCAD Project Association)</a>. Ci&ograve; significa che la <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FPA</a> &egrave; l'unico organismo autorizzato a stabilire la propria licenza, ovvero a stabilire chi ha il diritto di utilizzare il logo di FreeCAD e chi no. I file del logo, che fanno parte del codice sorgente di FreeCAD o sono disponibili altrove, ad esempio su questo wiki, sono comunque tutti coperti dalle stesse licenze del resto di FreeCAD (LGPL per il codice sorgente e Creative Commons per questo wiki). Si &egrave; comunque liberi di utilizzare il logo di FreeCAD ovunque, alle stesse condizioni del resto di FreeCAD, il che significa, in sostanza, che dovete utilizzarlo per fare riferimento a FreeCAD e non utilizzarlo, ad esempio, per i vostri prodotti o in qualsiasi altro modo che non faccia riferimento a FreeCAD.
+<p>Il logo &egrave; un <a rel="nofollow" class="external text" href="https://fpa.freecad.org/documents/Trademark.pdf">marchio registrato di propriet&agrave; della FPA (FreeCAD Project Association)</a>. Ci&ograve; significa che la <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FPA</a> &egrave; l'unico organismo autorizzato a stabilire la propria licenza, ovvero a stabilire chi ha il diritto di utilizzare il logo di FreeCAD e chi no. I file del logo, che fanno parte del codice sorgente di FreeCAD o sono disponibili altrove, ad esempio su questo wiki, sono comunque tutti coperti dalle stesse licenze del resto di FreeCAD (LGPL per il codice sorgente e Creative Commons per questo wiki). Si &egrave; comunque liberi di utilizzare il logo di FreeCAD ovunque, alle stesse condizioni del resto di FreeCAD, il che significa, in sostanza, che va utilizzato per fare riferimento a FreeCAD e non utilizzato, ad esempio, per i propri prodotti o in qualsiasi altro modo che non faccia riferimento a FreeCAD.
 </p><p>In conclusione, si &egrave; liberi di utilizzare il logo FreeCAD ovunque, ma si dovrebbe usarlo solo per fare riferimento a FreeCAD stesso e non, ad esempio, alla propria attivit&agrave;.
 </p><p><span id="Guidelines"></span>
 </p>
@@ -19,12 +19,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116145505
+Cached time: 20260116145715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.019 seconds
-Real time usage: 0.035 seconds
+CPU time usage: 0.022 seconds
+Real time usage: 0.040 seconds
 Preprocessor visited node count: 13/1000000
 Post&#8208;expand include size: 3/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -38,7 +38,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116145505 and revision id 1739103. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411389-0!canonical and timestamp 20260116145715 and revision id 1739105. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
