--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro CloneConvert/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+CloneConvert&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--high" title="Makro Klon konvertieren (80% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Klon konvertieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_CloneConvert.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro CloneConvert (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CloneConvert (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CloneConvert (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Klonuj i konwertuj (4% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -72,11 +72,11 @@ Macro CloneConvert
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Crea un clone o una copia dell'oggetto e poi lo colloca nella posizione scelta e con le dimensioni desiderate (<i>pollici, mm, m, &micro;m</i>...) o a piacere. L'oggetto base &egrave; misurato in <i>mm</i> (secondo il sistema base di FreeCAD)
 </p>
 </div>
@@ -217,30 +217,30 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251022190411
+Cached time: 20260116164249
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
-Real time usage: 0.063 seconds
+CPU time usage: 0.048 seconds
+Real time usage: 0.073 seconds
 Preprocessor visited node count: 219/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2152/5000000 bytes
+Unstrip post&#8208;expand size: 2162/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.779      1 -total
- 29.21%    1.980      1 Template:Macro/it
- 21.17%    1.435      1 Template:Codeextralink
- 19.43%    1.317     12 Template:KEY
- 16.06%    1.089      1 Template:Clear
+100.00%   12.619      1 -total
+ 33.40%    4.215      1 Template:Macro/it
+ 29.85%    3.767      1 Template:Codeextralink
+ 16.48%    2.080     12 Template:KEY
+ 13.61%    1.717      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20251022190411 and revision id 1673504. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164249 and revision id 1739109. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
