--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -75,11 +75,8 @@ Macro CloneConvert
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Crea un clone o una copia dell'oggetto e poi lo colloca nella posizione scelta e con le dimensioni desiderate (<i>pollici, mm, m, &micro;m</i>...) o a piacere. L'oggetto base &egrave; misurato in <i>mm</i> (secondo il sistema base di FreeCAD)
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/9f2f2f6144e1307a048f1840ef99300c/raw/fb76b3c728c1c7cd085e87f5d6d223d9f79bb574/Macro_CloneConvert.FCMacro">Macro</a></i>
 </p>
@@ -112,12 +109,11 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/9f2f2f6144e1307a048
 </div>
 <div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://gist.githubusercontent.com/mario52a/9f2f2f6144e1307a048f1840ef99300c/raw/fb76b3c728c1c7cd085e87f5d6d223d9f79bb574/Macro_CloneConvert.FCMacro">https://gist.githubusercontent.com/mario52a/9f2f2f6144e1307a048f1840ef99300c/raw/fb76b3c728c1c7cd085e87f5d6d223d9f79bb574/Macro_CloneConvert.FCMacro</a>"&gt;raw code&lt;/a&gt;</div>
 <p><br>
+<span id="Usage"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <ol><li>Avviare la macro</li>
 <li>Definire le impostazioni di XYZ</li>
 <li>Scegliere "Clone" o "Copy"</li>
@@ -217,13 +213,13 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164249
+Cached time: 20260116164307
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.073 seconds
-Preprocessor visited node count: 219/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 215/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
 Highest expansion depth: 5/100
@@ -233,14 +229,14 @@ Unstrip post&#8208;expand size: 2162/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.619      1 -total
- 33.40%    4.215      1 Template:Macro/it
- 29.85%    3.767      1 Template:Codeextralink
- 16.48%    2.080     12 Template:KEY
- 13.61%    1.717      1 Template:Clear
+100.00%   19.353      1 -total
+ 47.47%    9.187      1 Template:Clear
+ 20.74%    4.014      1 Template:Macro/it
+ 12.88%    2.493      1 Template:Codeextralink
+ 12.48%    2.414     12 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164249 and revision id 1739109. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164307 and revision id 1739113. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
