Created page with "==Note=="

--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -121,11 +121,11 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/9f2f2f6144e1307a048
 <li>Selezionare l'oggetto</li>
 <li>Fare click su <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ok</span></li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Notes"></span>
+</p>
 <h2><span class="mw-headline" id="Note">Note</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Note_2">Note</span></h2>
 <ul><li>Se non viene inserito alcun valore viene creata una copia o un clone senza modifiche.</li>
 <li>Se non &egrave; selezionato alcun oggetto il pulsante <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ok</span> &egrave; colorato in rosso.</li></ul>
 </div>
@@ -213,12 +213,12 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164307
+Cached time: 20260116164312
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.043 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 215/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
@@ -229,14 +229,14 @@ Unstrip post&#8208;expand size: 2162/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.353      1 -total
- 47.47%    9.187      1 Template:Clear
- 20.74%    4.014      1 Template:Macro/it
- 12.88%    2.493      1 Template:Codeextralink
- 12.48%    2.414     12 Template:KEY
+100.00%   15.810      1 -total
+ 29.18%    4.614      1 Template:Clear
+ 27.51%    4.350      1 Template:Macro/it
+ 23.02%    3.639      1 Template:Codeextralink
+ 14.96%    2.366     12 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164307 and revision id 1739113. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164312 and revision id 1739115. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
