--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -181,12 +181,8 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 </div>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
-<p>L'icona di Macro_CloneConvert:  <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_CloneConvert.png&amp;filetimestamp=20150725195453&amp;.html" class="mw-file-description"><img src="../File/Macro_CloneConvert.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div> 
-<p><b>Macro_CloneConvert.FCMacro</b>
+<p>Icona <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_CloneConvert.png&amp;filetimestamp=20150725195453&amp;.html" class="mw-file-description"><img src="../File/Macro_CloneConvert.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
+</p><p><b>Macro_CloneConvert.FCMacro</b>
 </p><p>Scaricare la macro da Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/9f2f2f6144e1307a048f1840ef99300c">Macro_CloneConvert.FCMacro</a>
 </p><p><span id="Revision"></span>
 </p>
@@ -213,13 +209,13 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164312
+Cached time: 20260116164354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.043 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 215/1000000
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 211/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
 Highest expansion depth: 5/100
@@ -229,14 +225,14 @@ Unstrip post&#8208;expand size: 2162/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.810      1 -total
- 29.18%    4.614      1 Template:Clear
- 27.51%    4.350      1 Template:Macro/it
- 23.02%    3.639      1 Template:Codeextralink
- 14.96%    2.366     12 Template:KEY
+100.00%   15.020      1 -total
+ 30.78%    4.623      1 Template:Macro/it
+ 27.25%    4.093      1 Template:Codeextralink
+ 21.48%    3.226     12 Template:KEY
+ 13.58%    2.040      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164312 and revision id 1739115. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164353 and revision id 1739117. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
