Updated page BIM Layers/fr

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Layers/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Layers&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Ebenen (50% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Ebenen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM: Warstwy (50% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Warstwy (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Classification.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Classification.html" title="BIM Classification/fr">Classification</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Material.html" title="BIM Material/fr">Mat&eacute;riau</a>
@@ -51,11 +51,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
 <p>L'outil <b>Calques</b> vous permet de g&eacute;rer les <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calques</a>. Les calques sont un type sp&eacute;cial de groupe qui contr&ocirc;le les propri&eacute;t&eacute;s visuelles des objets plac&eacute;s &agrave; l'int&eacute;rieur. En modifiant les propri&eacute;t&eacute;s du calque, telles que la largeur de ligne, la couleur de ligne, la couleur de forme et la transparence, les modifications sont propag&eacute;es &agrave; ses objets enfants. Les calques n'interf&egrave;rent avec aucune autre structure FreeCAD telle que des <a href="../fr/Std_Group.html" title="Std Group/fr">groupes</a> ou des <a href="../fr/Arch_BuildingPart.html" title="Arch BuildingPart/fr">parties de b&acirc;timent</a> donc tout objet peut &ecirc;tre &agrave; la fois partie d'un calque et partie d'un groupe.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Gestionnaire de calques</p>
 <p>Les calques sont import&eacute;s et export&eacute;s de/vers <a href="../fr/Arch_IFC.html" title="Arch IFC/fr">Arch IFC</a> et <a href="../fr/Draft_DXF.html" title="Draft DXF/fr">Draft DXF/DWG</a>.
@@ -134,34 +131,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101506
+Cached time: 20260116191335
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.085 seconds
-Preprocessor visited node count: 444/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27405/2097152 bytes
 Template argument size: 10395/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1110/5000000 bytes
+Unstrip post&#8208;expand size: 1122/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.276      1 -total
- 39.88%    6.491      1 Template:BIM_Tools_navi/fr
- 35.67%    5.806      2 Template:Navigation_menu_2
- 15.84%    2.578      1 Template:Userdocnavi/fr
- 11.36%    1.849      2 Template:Docnav/fr
- 11.32%    1.842      1 Template:GuiCommand/fr
-  6.68%    1.088      1 Template:Caption
-  5.71%    0.929      2 Template:Button
-  5.68%    0.924      1 Template:MenuCommand
+100.00%   33.558      1 -total
+ 39.34%   13.203      1 Template:BIM_Tools_navi/fr
+ 26.64%    8.941      2 Template:Navigation_menu_2
+ 17.32%    5.811      1 Template:GuiCommand/fr
+ 15.59%    5.231      1 Template:Userdocnavi/fr
+ 10.15%    3.405      2 Template:Docnav/fr
+  6.02%    2.021      1 Template:Caption
+  4.51%    1.515      1 Template:MenuCommand
+  4.44%    1.491      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260115101506 and revision id 1738624. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191335 and revision id 1739155. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
