Created page with "La mise en œuvre de [[Native_IFC/fr|IFC natif]] est en cours. Les utilisateurs peuvent consulter le [https://yorik.uncreated.net/?blog%2Ffreecad blog de Yorik] pour obtenir des informations actualisées de la part d'un développeur principal de la fonction NativeIFC dans FreeCAD."

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Layers/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Layers&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Ebenen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Warstwy (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -63,9 +63,10 @@
 </p>
 <ul><li>Une ic&ocirc;ne IFC indique si un calque fait partie d'un projet IFC ou non.</li>
 <li>Un bouton <b>Assigner &agrave; un IFC</b> permet de d&eacute;placer un calque vers un projet IFC et de la transformer ainsi en calque IFC.</li></ul>
-<p>Implementation of <a href="../NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
+<p>La mise en &oelig;uvre de <a href="../fr/Native_IFC.html" title="Native IFC/fr">IFC natif</a> est en cours. Les utilisateurs peuvent consulter le <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">blog de Yorik</a> pour obtenir des informations actualis&eacute;es de la part d'un d&eacute;veloppeur principal de la fonction NativeIFC dans FreeCAD.
+</p><p><span id="Usage"></span>
 </p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+<h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Layers.html" title="BIM Layers">Manage Layers</a></span> button.</li>
 <li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
@@ -126,34 +127,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116191350
+Cached time: 20260116191537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 441/1000000
+CPU time usage: 0.079 seconds
+Real time usage: 0.145 seconds
+Preprocessor visited node count: 442/1000000
 Post&#8208;expand include size: 27405/2097152 bytes
 Template argument size: 10395/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1122/5000000 bytes
+Unstrip post&#8208;expand size: 1123/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.790      1 -total
- 41.74%    8.260      1 Template:BIM_Tools_navi/fr
- 32.37%    6.406      2 Template:Navigation_menu_2
- 13.05%    2.583      1 Template:Userdocnavi/fr
- 11.07%    2.190      2 Template:Docnav/fr
- 11.06%    2.188      1 Template:GuiCommand/fr
-  7.57%    1.499      1 Template:Caption
-  5.95%    1.178      1 Template:MenuCommand
-  5.35%    1.059      2 Template:Button
+100.00%   25.057      1 -total
+ 41.21%   10.325      1 Template:BIM_Tools_navi/fr
+ 32.56%    8.158      2 Template:Navigation_menu_2
+ 13.08%    3.278      1 Template:Userdocnavi/fr
+ 11.65%    2.918      1 Template:GuiCommand/fr
+ 10.39%    2.604      2 Template:Docnav/fr
+ 10.26%    2.572      1 Template:Caption
+  5.67%    1.420      1 Template:MenuCommand
+  5.42%    1.358      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191350 and revision id 1739159. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191537 and revision id 1739163. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
